added complete get route to display monster guest lsit

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -14,5 +14,6 @@
     <input id="nameIn" placeholder="Monster Name" type="text">
     <input id="lethalityIn" placeholder="Lethality from 1 - 10" type="number">
     <button id="addMonsterButton">Send Invite</button>
+    <ul id="guestList"></ul>
 </body>
 </html>
